# job-tracker

./: .ebignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  deploy.sh  notes.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: todo.md
.github/workflows/: django.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/.ebextensions/: django.config
backend/api/: admin.py  models.py
backend/api/management/commands/: clear_emails.py  create_user.py  populate_data.py
backend/api/migrations/: 0001_initial.py  0002_alter_user_managers_googleauthtoken.py
backend/api/services/: gmail_service.py  gmail_sync.py
backend/api/tests/: test_clear_emails.py  test_create_test_user.py  test_populate_data.py
backend/api/tests/management/commands/: test_clear_emails.py  test_create_user.py  test_populate_data.py
backend/api/tests/services/: test_gmail_service.py
backend/api/utils/: parsers.py
backend/core/: settings.py
backend/scripts/: fetch_mail.py
